runFormatTest(import.meta, ["jsonc"], { quoteProps: "as-needed" });
runFormatTest(import.meta, ["jsonc"], { quoteProps: "consistent" });
runFormatTest(import.meta, ["jsonc"], { quoteProps: "preserve" });
